2010-06-13 MA Yue <velly.empire@gmail.com>

    * Complete all Firefox tweaks

2010-06-12 Devil Wang <wxjeacen@gmail.com>
    
    * Add DOSBox to software pane

2010-06-11 Ray Chen <chenrano2002@gmail.com>

    * Do not raise Exception if proxy string is empty

2010-06-10 Ray Chen <chenrano2002@gmail.com>

    * Always download latest Firefox extensions

2010-06-08 Homer Xing <homer.xing@gmail.com>

    * Improve RPM backend efficiency

2010-06-07 Homer Xing <homer.xing@gmail.com>

    * Fix bug: newline appears in menuitems of default pane
    * Pretty changelog rendering
    * Hide empty category

2010-06-05 Homer Xing <homer.xing@gmail.com>

    * Add software items for Archlinux

2010-06-05 SHANG Yuanchun <idealities@gmail.com>

    * Add support for installing software on Archlinux
    * Fix bugs in class PACMAN

2010-06-04 Homer Xing <homer.xing@gmail.com>

    * Improve architecture. Do not need to manually update AILURUS_VERSION.
    * Add dbus daemon version. Check dbus daemon status by reading version.
    * Provide a dialog to restart daemon.
    * Improve code. Express all of Mint, YLMF, Deepin as UBUNTU_DERIV.
    * Improve code. Do not import lib twice.
    * Check wrong code name in sources list.
    * Do not check colorful BASH PS1 on Deepin Linux because BASH PS1 is colorful already.
    * Do not try to read Firefox preference location if Firefox is not installed.
    * Fix bug: state is not refeshed after running quick setup.
    * Support proxy server.

2010-06-03 MA Yue <velly.empire@gail.com>

    * Add Flashblock, Ease Link and WebMail Notifier

2010-06-02 Homer Xing <homer.xing@gmail.com>

    * Do not interrupt installation process if download() failed
    * Fix bug: TempOwn fails if directory does not exist
    * Handle the situation such that information function returns []

2010-06-01 Homer Xing <homer.xing@gmail.com>

    * Move stardict dictionaries into computer doctor pane