@@ -59,12 +59,9 @@ def __change_kernel_swappiness():
                 contents.append(new_line)
             with open('/etc/sysctl.conf', 'w') as f:
                 f.writelines(contents)
-        try:
-            run_as_root('/sbin/sysctl -p', ignore_error = True)
-            current_value = int( get_output('/sbin/sysctl -n vm.swappiness').strip() )
-            if current_value != new_value: raise CommandFailError
-        except AccessDeniedError:
-            pass
+        run_as_root('/sbin/sysctl -p', ignore_error = True)
+        current_value = int( get_output('/sbin/sysctl -n vm.swappiness').strip() )
+        if current_value != new_value: raise CommandFailError
     
     apply_button = image_stock_button(gtk.STOCK_APPLY, _('Apply') )
     apply_button.connect('clicked', apply, adjustment)
@@ -89,10 +86,7 @@ def __restart_network():
              obj.wake(dbus_interface='org.freedesktop.NetworkManager')
              if UBUNTU or UBUNTU_DERIV:
                  notify(' ', _('Run command: ')+'/etc/init.d/networking restart')
-                 try:
-                     run_as_root('/etc/init.d/networking restart')
-                 except AccessDeniedError:
-                     pass
+                 run_as_root('/etc/init.d/networking restart')
              notify(_('Information'), _('Network restarted successfully.'))
          except: pass
      button_restart_network = gtk.Button(_('Restart network').center(30))
