@@ -1,3 +1,7 @@
+2010-06-15 Homer Xing <homer.xing@gmail.com>
+
+    * Improve processing for AccessDeniedError
+
 2010-06-13 MA Yue <velly.empire@gmail.com>
 
     * Complete all Firefox tweaks
